Env vars to disable logging gc to disk